# maverick-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  sp500_symbols_cache.txt
.claude/: settings.local.json
alembic/versions/: 001_create_all_tables.py  002_add_missing_indexes.py  003_add_portfolio_ledger_tables.py
dev-doc/: CHANGES.md  DOCKER_COMMANDS.md  INFRA.md  INSTALLATION_GUIDE_UV.md
docs/: INFRA.md
launchd/: com.maverick.tiingoloader.daily.plist  com.maverick.tiingoloader.weekly.plist
maverick_mcp/: exceptions.py
maverick_mcp/agents/: deep_research.py  optimized_research.py  supervisor.py
maverick_mcp/api/: server.py
maverick_mcp/api/routers/: agents.py  portfolio.py  research.py  screening.py  tool_registry.py
maverick_mcp/api/services/: portfolio_ledger_service.py
maverick_mcp/backtesting/: strategy_executor.py  vectorbt_engine.py
maverick_mcp/backtesting/strategies/: parser.py
maverick_mcp/config/: database.py  llm_optimization_config.py  plotly_config.py  settings.py
maverick_mcp/data/: models.py  performance.py
maverick_mcp/monitoring/: health_check.py  status_dashboard.py
maverick_mcp/providers/: bailian_provider.py  llm_factory.py  market_data.py  openrouter_provider.py  stock_data.py
maverick_mcp/providers/factories/: config_factory.py
maverick_mcp/utils/: yfinance_pool.py
maverick_mcp/workflows/: __init__.py  state.py
scripts/: dev.sh  init-db.sh  load_tiingo_data.py  requirements_tiingo.txt  sync-db.sh  test_bailian.py  tiingo_config.py  validate_setup.py
tests/: conftest.py  test_exa_research_integration.py  test_portfolio_ledger.py  test_portfolio_ledger_models.py  test_tavily_integration.py
tests/llm_providers/: __init__.py  test_bailian_provider.py  test_llm_factory.py
tests/tools_test/: __init__.py  conftest.py  test_backtesting_tools.py  test_data_tools.py  test_health_tools.py  test_market_tools.py  test_performance_tools.py  test_portfolio_tools.py  test_research_tools.py  test_screening_tools.py  test_technical_tools.py
